# sereal-rs

./: .travis.yml  Cargo.toml
common/: Cargo.toml
common/src/: constants.rs
decoder/: Cargo.toml
decoder/src/: arc.rs  arena.rs  config.rs  de.rs  header.rs  lexer.rs  lib.rs  parser.rs  reader.rs  varint.rs
dump/: Cargo.toml
dump/src/: main.rs
encoder/: Cargo.toml
