[package]
name = "sereal_decoder"
version = "0.1.0"
authors = ["Vickenty Fesunov <kent@setattr.net>"]
license = "MIT/Apache-2.0"

[dependencies]
sereal_common = { path="../common" }

byteorder = "1.0"
typed-arena = "1.2"

snap = { version = "0.2", optional = true }
flate2 = { version = "0.2", optional = true }
zstd = { version = "0.4", optional = true }

[features]
default = [ "v2", "v3", "v4" ]
v2 = [ "snap" ]
v3 = [ "flate2" ]
v4 = [ "zstd" ]
