[package]
name = "sereal_decoder"
version = "0.1.0"
authors = ["Vickenty Fesunov <kent@setattr.net>"]
license = "MIT/Apache-2.0"

[dependencies]
sereal_common = { path="../common" }

byteorder = "1.0"
typed-arena = "1.2"
serde = "0.9"

snap = { version = "0.2", optional = true }
flate2 = { version = "0.2", optional = true }
zstd = { version = "0.4", optional = true }

[dev-dependencies]
serde_derive = "0.9"

[features]
default = [ "comp-snappy", "comp-zlib", "comp-zstd" ]
comp-snappy = [ "snap" ]
comp-zlib = [ "flate2" ]
comp-zstd = [ "zstd" ]
